fixed button hover

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
 
         <div class="flex gap-5">
           <button
-            class="bg-cyan-300 text-black w-1/2 py-2 rounded-md"
+            class="bg-cyan-300 hover:bg-cyan-400 text-black w-1/2 py-2 rounded-md"
             onclick="handleCopy()"
           >
             Copy to clipboard
           </button>
           <button
-            class="bg-pink-500 text-black w-1/2 py-2 rounded-md"
+            class="bg-pink-500 hover:bg-pink-600 text-black w-1/2 py-2 rounded-md"
             onclick="generatePassword()"
           >
             Re-Generate
